Добавлено кеширование. большие перемены в папке data

--- a/dev_data/device.htm
+++ b/dev_data/device.htm
@@ -9,7 +9,7 @@
   <title>Options page</title>
   <script type="text/javascript">
    var mode = 'off';
-   var nex_color = 'ff6600'
+   var nex_color = 'ff6600';
    function handleServerResponse(){
     var img = _('.thumb img'),
         canvas = _('#cs'),
@@ -179,7 +179,7 @@
      </div>
      <div class="thumb">
       <div class="preview"></div>
-      <img alt="" style="cursor:pointer;width:100%;" src="/swatches.png" />
+      <img alt="" style="cursor:pointer;width:100%;" src="/img/swatches.png" />
      </div>
      <canvas id="cs" style="display:none;"></canvas>
      <select class="btn btn-block btn-default" onchange="set_mode(this.value,this);">
