--- a/dev_data/index.htm
+++ b/dev_data/index.htm
@@ -54,7 +54,7 @@
     xhttp.send();
     jsonResponse1 = JSON.parse(xhttp.responseText);
 
-    xhttp.open("GET", "http://"+ipval+"/lang/lang."+jsonResponse1.lang+".json?"+Math.floor(Math.random()*10000), false);
+    xhttp.open("GET", "http://"+ipval+"/lang/lang."+jsonResponse1.lang+".json", false);
     xhttp.send();
     jsonResponse2=JSON.parse(xhttp.responseText);
     jsonResponse = Object.assign(jsonResponse1, jsonResponse2);
