--- a/dev_data/block.htm
+++ b/dev_data/block.htm
@@ -10,18 +10,18 @@
   <h5 class="alert-warning">{{LangTime10}}</h5>
   <h4>{{LangTime8}}</h4>
   <div class="btn-group">
-   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&time=60&sound='+val('sound')*10,thisId);return false" value="1">
-   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&time=300&sound='+val('sound')*10,thisId);return false" value="5">
-   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&time=600&sound='+val('sound')*10,thisId);return false" value="10">
-   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&time=1500&sound='+val('sound')*10,thisId);return false" value="15">
-   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&time=1800&sound='+val('sound')*10,thisId);return false" value="30">
+   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&time=60&sound='+val('sound')*10+'&s='+val('speed'),thisId);return false" value="1">
+   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&time=300&sound='+val('sound')*10+'&s='+val('speed'),thisId);return false" value="5">
+   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&time=600&sound='+val('sound')*10+'&s='+val('speed'),thisId);return false" value="10">
+   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&time=1500&sound='+val('sound')*10+'&s='+val('speed'),thisId);return false" value="15">
+   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&time=1800&sound='+val('sound')*10+'&s='+val('speed'),thisId);return false" value="30">
   </div>
   <br>
   <div class="btn-group">
-   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&time=3600&sound='+val('sound')*10,thisId);return false" value="60">
-   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&time=5400&sound='+val('sound')*10,thisId);return false" value="1:30">
-   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&time=7200&sound='+val('sound')*10,thisId);return false" value="2:00">
-   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&time=10800&sound='+val('sound')*10,thisId);return false" value="3:00">
+   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&time=3600&sound='+val('sound')*10+'&s='+val('speed'),thisId);return false" value="60">
+   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&time=5400&sound='+val('sound')*10+'&s='+val('speed'),thisId);return false" value="1:30">
+   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&time=7200&sound='+val('sound')*10+'&s='+val('speed'),thisId);return false" value="2:00">
+   <input type="submit" class="btn btn-primary btn-sm" onclick="toggle('pop-up-{{ip}}');ajax('{{ip}}',colorUrl+'&time=10800&sound='+val('sound')*10+'&s='+val('speed'),thisId);return false" value="3:00">
   </div>
   <hr>
   <h4>{{LangTime5}}</h4>
@@ -29,6 +29,8 @@
    <input class="form-control" value="0.1" pattern="[-+]?[0-9]*[.]?[0-9]+" id="sound">
    <span class="input-group-addon">{{LangSec}}</span>
   </div>
+  <h4>{{LangSpeed}}</h4>
+  <input id="speed" type="range" min="0" max="255" step="1" value="100">
   <hr>
   <a href="#" onclick="toggle('pop-up-{{ip}}');return false" class="btn btn-block btn-default">{{LangCancel}}</a>
  </div>
