--- a/dev_data/block.htm
+++ b/dev_data/block.htm
@@ -30,7 +30,7 @@
    <span class="input-group-addon">{{LangSec}}</span>
   </div>
   <h4>{{LangSpeed}}</h4>
-  <input id="speed" type="range" min="0" max="255" step="1" value="100">
+  <input id="speed" class="form-control" type="range" min="0" max="255" step="1" value="100">
   <hr>
   <a href="#" onclick="toggle('pop-up-{{ip}}');return false" class="btn btn-block btn-default">{{LangCancel}}</a>
  </div>
