--- a/dev_data/device.htm
+++ b/dev_data/device.htm
@@ -54,7 +54,7 @@
     },false);
     document.body.style.backgroundColor="#"+jsonResponse.color;
     if (jsonResponse.state=='0') {blockval=jsonResponse.LangOn;} else {blockval=jsonResponse.LangOff;}
-    document.getElementById('off-on').value = blockval;
+    val('off-on', blockval);
     LoadLang(jsonResponse.lang);
    }
    function useCanvas(el,image,callback){
@@ -85,10 +85,6 @@
     return undefined;
    }
 
-   function led(submit){
-    server = "/led";
-    send_request(submit,server);
-   }
    function set_rgb(submit,t){
     document.body.style.background="#"+nex_color;
     //server = "/rgb?r="+r+"&g="+g+"&b="+b+"&t="+t+"&s="+val('sound')*10;
@@ -117,21 +113,15 @@
     toggle('pop-up');
     set_rgb(submit,t,'off');
    }
-   function set_time(submit){
-    server = "/TimeLed?t="+val('led');
-    send_request(submit,server);
-   }
    function set_time1(submit){
-    server = "/times1?time1="+val('time1');
-    send_request(submit,server);
+    send_request(submit,'/times1?time1='+val('time1'));
    }
    function set_time2(submit){
-    server = "/times2?time2="+val('time2');
-    send_request(submit,server);
+    send_request(submit,'/times2?time2='+val('time2'));
    }
-   function set_mode(mod,submit){
+   function set_mode(submit){
     toggle('pop-up');
-    mode = mod;
+    mode = submit.value;
    }
   </script>
  </head>
@@ -141,31 +131,30 @@
     <h1 id="title">{{LangOptions1}}</h1>
     <div class="col-sm-offset-2 col-sm-8 col-md-offset-3 col-md-6">
      <h5 class="alert-info">{{SSDP}}</h5>
-     <select class="btn btn-default" id="language" onchange="language(this.value,this);">
+     <select class="btn btn-default" id="language" onchange="language(this);">
       <option value="en">{{lang}}</option>
      </select>
      <a class="btn btn-block btn-danger" href="/">{{LangDevices}}</a>
      <a class="btn btn-block btn-default" href="/setup.htm">{{LangSetting3}}</a>
      <hr>
-     <div class="alert alert-dismissible alert-info">{{LangIfttt1}}<span id="hide" class="hidden">{{LangIfttt2}}</span>
-     </div>
+     <div class="alert alert-dismissible alert-info {{g2342}}"><button class="close" onclick="setCookie('g2342','hidden',365,this);" type="button">×</button>{{LangIfttt1}}<span id="hide" class="hidden">{{LangIfttt2}}</span></div>
      <div class="row hidden" id="pop-up">
       <div class="col-sm-offset-3 col-sm-6 pop-up">
        <h5 class="alert-warning">{{LangTime10}}</h5>
        <h4>{{LangTime8}}</h4>
        <div class="btn-group">
-        <input type="submit" class="btn btn-primary btn-sm" onclick="on_rgb(this,60)" value="1">
-        <input type="submit" class="btn btn-primary btn-sm" onclick="on_rgb(this,300)" value="5">
-        <input type="submit" class="btn btn-primary btn-sm" onclick="on_rgb(this,600)" value="10">
-        <input type="submit" class="btn btn-primary btn-sm" onclick="on_rgb(this,1500)" value="15">
-        <input type="submit" class="btn btn-primary btn-sm" onclick="on_rgb(this,1800)" value="30">
+        <input type="button" class="btn btn-primary btn-sm" onclick="on_rgb(this,60)" value="1">
+        <input type="button" class="btn btn-primary btn-sm" onclick="on_rgb(this,300)" value="5">
+        <input type="button" class="btn btn-primary btn-sm" onclick="on_rgb(this,600)" value="10">
+        <input type="button" class="btn btn-primary btn-sm" onclick="on_rgb(this,1500)" value="15">
+        <input type="button" class="btn btn-primary btn-sm" onclick="on_rgb(this,1800)" value="30">
        </div>
        <br>
        <div class="btn-group">
-        <input type="submit" class="btn btn-primary btn-sm" onclick="on_rgb(this,3600)" value="60">
-        <input type="submit" class="btn btn-primary btn-sm" onclick="on_rgb(this,5400)" value="1:30">
-        <input type="submit" class="btn btn-primary btn-sm" onclick="on_rgb(this,7200)" value="2:00">
-        <input type="submit" class="btn btn-primary btn-sm" onclick="on_rgb(this,10800)" value="3:00">
+        <input type="button" class="btn btn-primary btn-sm" onclick="on_rgb(this,3600)" value="60">
+        <input type="button" class="btn btn-primary btn-sm" onclick="on_rgb(this,5400)" value="1:30">
+        <input type="button" class="btn btn-primary btn-sm" onclick="on_rgb(this,7200)" value="2:00">
+        <input type="button" class="btn btn-primary btn-sm" onclick="on_rgb(this,10800)" value="3:00">
        </div>
        <hr>
        <h4>{{LangTime5}}</h4>
@@ -181,10 +170,10 @@
      </div>
      <div class="thumb">
       <div class="preview"></div>
-      <img alt="" style="cursor:pointer;width:100%;" src="/img/swatches.png" />
+      <img alt="" style="cursor:pointer;width:100%" src="/img/swatches.png" />
      </div>
-     <canvas id="cs" style="display:none;"></canvas>
-     <select class="btn btn-block btn-default" onchange="set_mode(this.value,this);">
+     <canvas id="cs" style="display:none"></canvas>
+     <select class="btn btn-block btn-default" onchange="set_mode(this);">
       <option value="0">Select Mode</option>
       <option value="0">Static</option>
       <option value="1">Blink</option>
@@ -229,27 +218,27 @@
       <option value="40">Larson Scanner</option>
       <option value="41">Fireworks</option>
      </select>
-     <input type="submit" class="btn btn-block btn-primary" onclick="led(this);" id="off-on" value="{{LangOnOff}}">
+     <input type="button" class="btn btn-block btn-primary" onclick="send_request(this,'/led');" id="off-on" value="{{LangOnOff}}">
      <hr>
      <h2>{{LangTime3}}</h2>
      <div class="row">
       <div class="col-sm-6">
        <h4>{{LangTime4}} 1:</h4>
        <input id="time1" value="{{times1}}" pattern="(0[0-9]|1[0-9]|2[0-3])(:[0-5][0-9]){2}" class="form-control" placeholder="{{LangExample}}: 07:10:30">
-       <div class="btn-group" style="width:100%;">
-        <input class="btn btn-success" style="width:70%;" value="{{LangSave}}" onclick="set_time1(this);" type="submit">
-        <input class="btn btn-default" style="width:30%;" value="{{LangOff.}}" onclick="document.getElementById('time1').value='';set_time1(this);" type="submit">
+       <div class="btn-group" style="width:100%">
+        <input class="btn btn-success" style="width:70%" value="{{LangSave}}" onclick="set_time1(this);" type="button">
+        <input class="btn btn-default" style="width:30%" value="{{LangOff.}}" onclick="val('time1',' ');set_time1(this);" type="button">
        </div>
        <h4>{{LangTime4}} 2:</h4>
        <input id="time2" value="{{times2}}" pattern="(0[0-9]|1[0-9]|2[0-3])(:[0-5][0-9]){2}" class="form-control" placeholder="{{LangExample}}: 07:10:30">
-       <div class="btn-group" style="width:100%;">
-        <input class="btn btn-success" style="width:70%;" value="{{LangSave}}" onclick="set_time2(this);" type="submit">
-        <input class="btn btn-default" style="width:30%;" value="{{LangOff.}}" onclick="document.getElementById('time2').value='';set_time2(this);" type="submit">
+       <div class="btn-group" style="width:100%">
+        <input class="btn btn-success" style="width:70%" value="{{LangSave}}" onclick="set_time2(this);" type="button">
+        <input class="btn btn-default" style="width:30%" value="{{LangOff.}}" onclick="val('time1',' ');set_time2(this);" type="button">
        </div>
       </div>
       <div class="col-sm-6">
        <div class="alert alert-dismissible alert-warning">{{LangTime6}}</div>
-       <div class="alert alert-dismissible alert-info">
+       <div class="alert alert-dismissible alert-info {{g2532}}"><button class="close" onclick="setCookie('g2532','hidden',365,this);" type="button">×</button>
         {{LangIfttt3}}
        </div>
       </div>
@@ -264,7 +253,7 @@
         <input id="led" value="{{timeled}}" class="form-control" pattern="[0-9]*[.,]?[0-9]+">
         <span class="input-group-addon">{{LangSec}}</span>
        </div>
-       <input class="btn btn-block btn-success" value="{{LangSave}}" onclick="set_time(this);" type="submit">
+       <input class="btn btn-block btn-success" value="{{LangSave}}" onclick="send_request(this,'/TimeLed?t='+val('led'));" type="button">
       </div>
      </div>
      <hr>
