Изменены переменные и исправлена ошибка в DDNS порте.

--- a/dev_data/block.htm
+++ b/dev_data/block.htm
@@ -4,7 +4,7 @@
   <button class="close" onclick="setCookie('g279149','hidden',365,this);" type="button">×</button>
   {{LangTime4}} 1: <b>{{times1}}</b>
   <br>{{LangTime4}} 2:  <b>{{times2}}</b>
-  <br>{{LangTime5}} <b>{{timeled}}</b>{{LangSec}}
+  <br>{{LangTime5}} <b>{{timeLed}}</b>{{LangSec}}
  </div>
  <hr>
  <div class="col-sm-offset-1 col-sm-10 pop-up hidden" id="pop-up-{{ip}}">
