--- a/dev_data/block.htm
+++ b/dev_data/block.htm
@@ -1,7 +1,7 @@
 <div class="block col-md-5">
  <h5 class="alert-info">{{SSDP}}</h5>
  <div class="alert alert-dismissible alert-warning {{g279149}}">
-  <button class="close" onclick="setCookie('g279149','hidden',365,this);" type="button">×</button>
+  <button class="close" onclick="hide('g279149',this);" type="button">×</button>
   {{LangTime4}} 1: <b>{{times1}}</b>
   <br>{{LangTime4}} 2:  <b>{{times2}}</b>
   <br>{{LangTime5}} <b>{{timeLed}}</b>{{LangSec}}
@@ -42,7 +42,7 @@
  <input type="button" onclick="ajax('{{ip}}','led',this);" value="{{state}}" class="btn btn-block btn-primary">
  <hr>
  <div class="alert alert-dismissible alert-info {{g27579}}">
-  <button class="close" onclick="setCookie('g27579','hidden',365,this);" type="button">×</button>{{LangOptions2}}
+  <button class="close" onclick="hide('g27579',this);" type="button">×</button>{{LangOptions2}}
  </div>
  <a class="btn btn-block btn-default" href="http://{{ip}}/device.htm">{{LangOptions1}}</a>
 </div>
