--- a/dev_data/device.htm
+++ b/dev_data/device.htm
@@ -267,10 +267,10 @@
            </div> -->
      <div class="{{g8359}}">
       <button class="close" onclick="hide('g8359',this);" type="button">×</button>
-      <h2>PIR Sensor</h2>
+      <h2>{{LangPir1}}</h2>
       <div class="row">
        <div class="col-sm-8">
-        <div class="alert alert-dismissible alert-info">Время в секундах как долго будет гореть LED от сенсора на движения. Если PIR сенсор не покдючен, значение должно быть 0.</div>
+        <div class="alert alert-dismissible alert-info">{{LangPir2}}</div>
        </div>
        <div class="col-sm-4">
         <div class="input-group">
